fixes theme selector z-index, position and makes chart reponsive

--- a/src/App.css
+++ b/src/App.css
@@ -136,11 +136,11 @@ button.selected{
 .theme-options-container {
   position: absolute;
   top:60px; /* Position below theme button */
-  right: 30px; /* Align to the right */
+  right: 2%; /* Align to the right */
   display: flex;
   flex-direction: column;
+  z-index: 10;
   background-color: #ffffff; /* Theme options background color */
-  
   border-radius: 50px;
   padding: 5px;
   
